Fix spacing on the banner on the homepage

--- a/css/outer/home/home.less
+++ b/css/outer/home/home.less
@@ -17,8 +17,9 @@
   }
 
   .banner {
-    // empty, with a total height of 30, all from padding-top
-    padding-bottom: 0px;
+    // empty, with a total height of 30
+    padding: 0px;
+    height: 30px;
   }
 
   .container {
